ft_containers_unit_tests/logs.txt
../stack_tests/constructor.cpp:38:14: error: no matching constructor for initialization of 'ft::Stack<int>'
        _stack<int> stack(deque);
                    ^     ~~~~~
../stack_tests/../system/../../../Stack.hpp:16:12: note: candidate constructor not viable: no known conversion from 'std::deque<int>' to 'const ft::Vector<int, std::__1::allocator<int> >' for 1st argument
                explicit Stack(const Container &cont = Container())             { _container = cont; };
                         ^
../stack_tests/../system/../../../Stack.hpp:17:3: note: candidate constructor not viable: no known conversion from 'std::deque<int>' to 'const ft::Stack<int, ft::Vector<int, std::__1::allocator<int> > >' for 1st argument
                Stack(const Stack &other)                                                                       { _container = other._container; };
                ^
1 error generated.
    ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<int, ft::Vector<int, std::__1::allocator<int> > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:11:2: error: constructor for 'StackBoolTest' must explicitly initialize the member 'st3' which does not have a default constructor
        StackBoolTest() {
        ^
../stack_tests/__service.ipp:8:24: note: member is declared here
        _stack<int> st1, st2, st3, st4;
                              ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<int, ft::Vector<int, std::__1::allocator<int> > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:11:2: error: constructor for 'StackBoolTest' must explicitly initialize the member 'st4' which does not have a default constructor
        StackBoolTest() {
        ^
../stack_tests/__service.ipp:8:29: note: member is declared here
        _stack<int> st1, st2, st3, st4;
                                   ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<int, ft::Vector<int, std::__1::allocator<int> > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:11:2: error: constructor for 'StackBoolTest' must explicitly initialize the member 'st5' which does not have a default constructor
        StackBoolTest() {
        ^
../stack_tests/__service.ipp:9:17: note: member is declared here
        _stack<string> st5, st6, st7, st8, st9;
                       ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<std::__1::basic_string<char>, ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:11:2: error: constructor for 'StackBoolTest' must explicitly initialize the member 'st6' which does not have a default constructor
        StackBoolTest() {
        ^
../stack_tests/__service.ipp:9:22: note: member is declared here
        _stack<string> st5, st6, st7, st8, st9;
                            ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<std::__1::basic_string<char>, ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:11:2: error: constructor for 'StackBoolTest' must explicitly initialize the member 'st7' which does not have a default constructor
        StackBoolTest() {
        ^
../stack_tests/__service.ipp:9:27: note: member is declared here
        _stack<string> st5, st6, st7, st8, st9;
                                 ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<std::__1::basic_string<char>, ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:11:2: error: constructor for 'StackBoolTest' must explicitly initialize the member 'st8' which does not have a default constructor
        StackBoolTest() {
        ^
../stack_tests/__service.ipp:9:32: note: member is declared here
        _stack<string> st5, st6, st7, st8, st9;
                                      ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<std::__1::basic_string<char>, ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:11:2: error: constructor for 'StackBoolTest' must explicitly initialize the member 'st9' which does not have a default constructor
        StackBoolTest() {
        ^
../stack_tests/__service.ipp:9:37: note: member is declared here
        _stack<string> st5, st6, st7, st8, st9;
                                           ^
../stack_tests/../system/../../../Stack.hpp:7:8: note: 'ft::Stack<std::__1::basic_string<char>, ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > >' declared here
        class Stack {
              ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:32:14: error: no matching constructor for initialization of 'ft::Stack<int>'
        _stack<int> my_stack;
                    ^
../stack_tests/../system/../../../Stack.hpp:17:12: note: candidate template ignored: couldn't infer template argument 'Cont'
                explicit Stack(const Cont &cont = Cont(),
                         ^
../stack_tests/../system/../../../Stack.hpp:20:3: note: candidate constructor not viable: requires single argument 'other', but no arguments were provided
                Stack(const Stack &other)                                                                       { _container = other._container; };
                ^
10 errors generated.
tainer; };
                ^
../stack_tests/constructor.cpp:40:14: error: no matching constructor for initialization of 'ft::Stack<int>'
        _stack<int> stack3;
                    ^
../stack_tests/../system/../../../Stack.hpp:17:12: note: candidate template ignored: couldn't infer template argument 'Cont'
                explicit Stack(const Cont &cont = Cont(),
                         ^
../stack_tests/../system/../../../Stack.hpp:20:3: note: candidate constructor not viable: requires single argument 'other', but no arguments were provided
                Stack(const Stack &other)                                                                       { _container = other._container; };
                ^
../stack_tests/../system/../../../Stack.hpp:19:34: error: no viable overloaded '='
                                                                                                                                        { _container = cont; };
                                                                                                                                          ~~~~~~~~~~ ^ ~~~~
../stack_tests/constructor.cpp:38:14: note: in instantiation of function template specialization 'ft::Stack<int, ft::Vector<int, std::__1::allocator<int> > >::Stack<std::__1::deque<int, std::__1::allocator<int> > >' requested here
        _stack<int> stack(deque);
                    ^
../stack_tests/constructor.cpp:56:71: note: in instantiation of function template specialization 'constructor_test<int>' requested here
        run_stack_unit_test<int>("constructor(container)", constructor_test, constructor_test);
                                                                             ^
../stack_tests/../system/../../../Vector.hpp:62:10: note: candidate function not viable: no known conversion from 'const std::__1::deque<int, std::__1::allocator<int> >' to 'const ft::Vector<int, std::__1::allocator<int> >' for 1st argument
        Vector& operator=(const Vector& other) {
                ^
12 errors generated.
